--- a/compare.html
+++ b/compare.html
@@ -71,20 +71,29 @@
         var firstDiff = -1;
         var shortLen = Math.min(m1.length, m2.length);
         var index = 0;
-        while (index < shortLen && m1[index] == m2[index]) {
-            index += 1;
-        }
-        firstDiff = index;
-
+        var results = [];
         var index1 = m1.length -1;
         var index2 = m2.length -1;
-        while (index1 > firstDiff && index2 > firstDiff &&
-               m1[index1] == m2[index2]) {
-          index1 -= 1;
-          index2 -= 1;
+
+        while (index < index1 && index < index2) {
+
+            while (index < shortLen && m1[index] == m2[index]) {
+                index += 1;
+            }
+            firstDiff = index;
+            
+            while (index1 > firstDiff && index2 > firstDiff &&
+                   m1[index1] == m2[index2]) {
+                index1 -= 1;
+                index2 -= 1;
+            }
+
+            results.push([firstDiff, index1, index2]);
+            index += 1;
+            index1 -= 1;
+            index2 -= 1;
         }
-       
-         return [firstDiff, index1, index2];
+      return results;  
     }
   
   function hexBytesToOutput(area1, area2) {
