--- a/convertUZ.html
+++ b/convertUZ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Unicode - Zawgyi Conversion
+    <title>Unicode <-> Zawgyi Conversion
    </title>
 
   <link rel="stylesheet" href="/css/blueprint/screen.css" type="text/css" media="screen, projection">
@@ -17,7 +17,8 @@
 
   <script type="text/javascript" src="/js/myzu.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.1.0/zawgyi_converter.min.js">
+  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.1.0/zawgyi_converter.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.1.0/zawgyi_detector.min.js"></script>
   </script>
   
   </script>
@@ -31,6 +32,10 @@
 
   <script type="text/javascript" >
   const zawgyi_converter = new google_myanmar_tools.ZawgyiConverter();
+  const zawgyi_detector = new google_myanmar_tools.ZawgyiDetector();
+
+  // Store pointers.
+  myzu_initialize(zawgyi_detector, zawgyi_converter);
 
   // Test conversion with this data [zawgyi, unicode]
   var TEST_DATA = {
@@ -190,8 +195,12 @@
             Known Unicode content: <a href="http://www.bbc.com/burmese"  target="_blank">
               bbc.com/burmese</a>
         </div>
-      <div>
-        <h4 style='margin:0;padding:0;'>Text Entry:</h4>
+        <div>
+          <p>Note: This page uses <a href="https://github.com/googlei18n/myanmar-tools">myanmar-tools
+              on GitHib</a> for detection and converting Zawgyi text.
+        </div>
+        <div>
+          <h4 style='margin:0;padding:0;'>Text Entry:</h4>
         <p>
           <input type="text" id="TestEntry" class='notosans' size="40"
                  onchange="enterTestText(true)" value="{{input_text}}" placeholder="<enter text here>" />
@@ -210,10 +219,12 @@
       <a href="http://www.unicode.org/charts/PDF/UAA60.pdf">Extended-A</a>
       <br />
       <a href="http://www.unicode.org/charts/PDF/UA9E0.pdf">Extended-B</a>
-
-      <br />
+      <hr>
+      <a href="https://github.com/googlei18n/myanmar-tools">Myanmar Tools on GitHub</a>
+      <hr>
       <a href="https://www.unicode.org/notes/tn11/UTN11_3.pdf">Representing Myanmar in Unicode</a>
-      <a href="https://www.unicode.org/faq/myanmar.html">Unicode FAQ</a>
+      <br />
+      <a href="https://www.unicode.org/faq/myanmar.html">MyanmarUnicode FAQ</a>
       <a href="https://my.wikipedia.org/wiki/Wikipedia:Font">Wikipedia:Font</a>
       <br />
 
@@ -224,7 +235,7 @@
   </div>  <!-- container -->
 
   <div class="container">
-    <div class='span-16'>
+    <div class='span-12'>
       <hr>
 
       <div>
@@ -239,13 +250,6 @@
                   rows="3" cols="80">{{default_zawgyi}}</textarea>
       </div>
 
-      <div>
-        <h4 style='margin:0;padding:0;'>Zawgyi OUT
-          <input type="button" value="-> Unicode" onclick="convertRequest('zoutput', 'Z', 'unicode_out', 'uOutHex')" />
-        </h4>
-        <textarea id="zoutput"  class='zawgyi_one'
-                  rows="3" cols="80"></textarea>
-      </div>
       <hr>
       <div>
         <h4 style='margin:0;padding:0;'>Unicode IN:
@@ -256,15 +260,22 @@
         <textarea id="unicode_in"  class='notosans'
                   rows="5" cols="80"></textarea>
 
+      <div>
+        <h4 style='margin:0;padding:0;'>Zawgyi OUT
+          <input type="button" value="-> Unicode" onclick="convertRequest('zoutput', 'Z', 'unicode_out', 'uOutHex')" />
+        </h4>
+        <textarea id="zoutput"  class='zawgyi_one'
+                  rows="3" cols="80"></textarea>
+      </div>
+      <div id="uOut" class='notosans14'> </div>
         <h4 style='margin:0;padding:0;'>Unicode OUT:</h4>
-        <div id="uOut" class='notosans14'> </div>
         <textarea id="unicode_out"  class='notosans'
                   rows="2" cols="80"></textarea>
         <hr>
       </div>
     </div>  <!-- end of left column -->
 
-    <div class='span-8 last'>
+    <div class='span-12 last'>
       <hr>
       <h4 style='margin:0;padding:0;'>Zawgyi in hex:</h4>
       <br />
@@ -273,16 +284,16 @@
       <input type="button" value="-> Zawgyi" onclick="hexToOutput('zInHex', 'z1');" />
 
       <hr>
-      <h4 style='margin:0;padding:0;'>Zawgyi out hex:</h4>
-
-      <textarea id="zOutHex"  class='notosans14'
-                rows="5" cols="40"></textarea>
-      <hr>
 
       <h4 style='margin:0;padding:0;'>Unicode in hex:</h4>
       <textarea id="uInHex"  class='notosans14'
                 rows="5" cols="40"></textarea>
       <input type="button" value="-> Unicode In" onclick="hexToOutput('uInHex', 'unicode_in');" />
+      <hr>
+      <h4 style='margin:0;padding:0;'>Zawgyi out hex:</h4>
+
+      <textarea id="zOutHex"  class='notosans14'
+                rows="5" cols="40"></textarea>
       <hr>
 
       <h4 style='margin:0;padding:0;'>Unicode out hex:</h4>
@@ -299,7 +310,6 @@
       
       <input type="button" value="-> Unicode" onclick="hexToOutput('hexText', 'unicode_in')" />
       <input type="button" value="-> Zawgyi" onclick="hexToOutput('hexText', 'z1')" />
-      <input type="button" value="-> scratch" onclick="copyText('hexText', 'scratchText')" />
     </div>
   
     <div>
@@ -310,9 +320,6 @@
         {% endfor %}
       </select>
       <br />
-      <p>Scratch pad:</P>
-      <textarea id="scratchText" class='notosans14' rows="1" cols="80"></textarea>
-      <input type="button" value="Scratch -> Unicode" onclick="hexToOutput('scratchText', 'unicode_in');" />
     </div>
     <hr>
     <br />
