--- a/zdecode.html
+++ b/zdecode.html
@@ -16,11 +16,37 @@
 
   <script type="text/javascript" src="/js/myzu.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.1.0/zawgyi_converter.min.js">
-  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.1.0/zawgyi_converter.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.1.0/zawgyi_detector.min.js"></script>
+  </script>  </script>
 
   <script type="text/javascript" >
+// Converts Zawgyi to/from Unicode
+function convertRequest(source, type, outputId, outputHexId) {
+    // Get the text and prepare the call to server.
+    source_element = document.getElementById(source);
 
+    text_in = source_element.value;
+    var converted = false;
+    var outText = "";
+    if (type == "Z") {
+        // Just call the javascript version.
+        outText = zawgyi_converter.zawgyiToUnicode(text_in);
+        converted = true;
+    } else
+    if (type == "U") {
+        outText = zawgyi_converter.unicodeToZawgyi(text_in);
+        converted = true;
+    }
+    if (converted) {
+        var output_area = document.getElementById(outputId);
+        output_area.innerHTML = output_area.value = outText;
+
+        var hex_area = document.getElementById(outputHexId);
+        hex_area.value = textToHex(outText);
+        return;
+    }
+}
   </script>
 
   </head>
@@ -35,26 +61,31 @@
                     rows="1" cols="40">{{default_zawgyi}}</textarea>
           Zawgyi One
           <input type="button" value="-> hex" onclick="textToHexField('z1', 'hexText')" />
-          <input type="button" value="-> Unicode" onclick="convertRequest('z1', 'Z')" />
+          <input type="button" value="-> Unicode"
+                 onclick="convertRequest('z1', 'Z', 'u1', 'textHex');"
           </div>
 
           <div>
           ZDecode text:
           <br />
-          <textarea id="z1"  class='zdecode'
+          <textarea id="zd"  class='zdecode'
                     rows="1" cols="40">{{default_text}}</textarea>
           Zawgyi One
-          <input type="button" value="-> hex" onclick="textToHexField('z1', 'hexText')" />
-          <input type="button" value="-> Unicode" onclick="convertRequest('z1', 'Z')" />
+          <input type="button" value="-> hex" onclick="textToHexField('zd', 'hexText')" />
 </div>
           <div>
           Unicode text:
           <br />
-          <textarea id="z1"  class='notosans'
+          <textarea id="u1"  class='notosans'
                     rows="1" cols="40">{{default_unicode}}</textarea>
-          Zawgyi One
-          <input type="button" value="-> hex" onclick="textToHexField('z1', 'hexText')" />
-          <input type="button" value="-> Unicode" onclick="convertRequest('z1', 'Z')" />
+          <input type="button" value="-> hex" onclick="textToHexField('u1', 'hexText')" />
+          <input type="button" value="-> Unicode"
+                                  onclick="convertRequest('u1', 'U', 'z1', 'textHex');"
+
+          </div>
+          <div>Hex<br />
+               <textarea id="hexText"  class='notosans'
+                    rows="1" cols="40">{{default_unicode}}</textarea>
 </div>
       </div>
   </div>
