More zdecode fixes

--- a/convertUZ.html
+++ b/convertUZ.html
@@ -12,16 +12,12 @@
   
   <link rel="stylesheet" type="text/css" href="/css/fonts.css">
   
-   <script type="text/javascript" src="/js/shake-n-break.js">
-   </script>
+   <script type="text/javascript" src="/js/shake-n-break.js"></script>
 
   <script type="text/javascript" src="/js/myzu.js"></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.1.0/zawgyi_converter.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.1.0/zawgyi_detector.min.js"></script>
-  </script>
-  
-  </script>
 
   <style>
     .select-my {
