tweaking display of text

--- a/zdecode.html
+++ b/zdecode.html
@@ -9,6 +9,7 @@
   <![endif]-->
 
   <link rel="stylesheet" type="text/css" href="/css/fonts.css">
+  <link rel="stylesheet" type="text/css" href="/css/textarea.css">
 
   <script type="text/javascript" src="/js/myzu.js"></script>
 
