Update detect/convert version to 1.2.0

--- a/convert2.html
+++ b/convert2.html
@@ -16,7 +16,7 @@
 
   <script type="text/javascript" src="/js/myzu.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.1.3/zawgyi_converter.min.js">
+  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.2.0/zawgyi_converter.js">
   </script>
   
   <script type="text/javascript" >
