--- a/convertUZ.html
+++ b/convertUZ.html
@@ -16,8 +16,8 @@
 
   <script type="text/javascript" src="/js/myzu.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.1.3/zawgyi_converter.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.1.3/zawgyi_detector.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.2.0/zawgyi_converter.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.2.0/zawgyi_detector.js"></script>
 
   <style>
     .select-my {
@@ -165,6 +165,14 @@
     return start + "-" + end;
   }
 
+  // Send text to external site for visualization of Zawgyi detection.
+  function callVisualization(sourceName) {
+    var area = document.getElementById(sourceName);
+    var intext = area.value;
+    var url_call = 'https://sffc.github.io/myanmar-tools-demos/detector_demo.html#s=' + intext;
+    window.open(url_call, "_blank");
+  }
+
   function onload() {
     textToHexField('z1', 'zInHex');
 
@@ -209,10 +217,13 @@
         </div>
         <div>
           <h4 style='margin:0;padding:0;'>Text Entry:</h4>
-        <p>
-          <input type="text" id="TestEntry" class='notosans' size="40"
-                 onchange="enterTestText(true)" value="{{input_text}}" placeholder="<enter text here>" />
-          <div id="detectedZU"></div>
+          <p>
+<input type="text" id="TestEntry" class='notosans' size="40"
+onchange="enterTestText(true);" value="" placeholder="<enter text here>" />
+<input type="button" value="Visualize Detection Details"
+onclick="callVisualization('TestEntry');"/>
+<span id="detectedZU" class="score"></span>
+<br/>
       </div>
     </div>
 
@@ -221,6 +232,8 @@
       <a href="/shan/">Shan</a> <br />
       <a href="/mon/">Mon</a> <br />
       <a href="/karen/">Karen</a> <br />
+      <hr>
+      <a href="https://tipitaka.org/mymr/" target="_blank">Pali Unicode samples</a>
       <hr>
       <a href="http://www.unicode.org/charts/PDF/U1000.pdf">Myanmar Unicode</a>
       <br />
